Reworked the project architecture for a more domain centric design. the new architecture looks like this:
Web -> Domain <- Infrastructure
Web -> Infrastructure

--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -11,7 +11,10 @@
 
   <ItemGroup>
     <Folder Include="Database\Util\" />
-    <Folder Include="Util\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
