Group chat message creation

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -17,4 +17,17 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="publish\publish\web.config" />
+    <_ContentIncludedByDefault Remove="publish\web.config" />
+    <_ContentIncludedByDefault Remove="publish\appsettings.Development.json" />
+    <_ContentIncludedByDefault Remove="publish\appsettings.json" />
+    <_ContentIncludedByDefault Remove="publish\publish\appsettings.Development.json" />
+    <_ContentIncludedByDefault Remove="publish\publish\appsettings.json" />
+    <_ContentIncludedByDefault Remove="publish\publish\Web.deps.json" />
+    <_ContentIncludedByDefault Remove="publish\publish\Web.runtimeconfig.json" />
+    <_ContentIncludedByDefault Remove="publish\Web.deps.json" />
+    <_ContentIncludedByDefault Remove="publish\Web.runtimeconfig.json" />
+  </ItemGroup>
+
 </Project>
